File: testsuite/nexus-docker-testsupport/src/main/java/com/sonatype/nexus/docker/testsupport/saml/idp/SamlIdpITConfigFactory.java